force-app/main/default/objects/Quote/fields/Price_With_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_With_VAT__c</fullName>
    <description>Auto generate price whit VAT</description>
    <label>Price With VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>