force-app/main/default/objects/Quote/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <label>VAT Rate</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>